<resources>
    <string name="app_name">Wager Buddy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="makeBet">Place A Bet</string>
    <string name="applyBet">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="homeTeam">Home Team</string>
    <string name="awayTeam">Away Team</string>
    <string name="betValue">Wager</string>
    <string name="spread">Spread</string>
    <string name="total">Total</string>
    <string name="odds">Odds</string>

    <string name="save">Save</string>
    <string name="betAdded">Your bet has been added to your list</string>
    <string name="setScore">Set Score</string>
    <string name="saveScore">Save Score</string>

    <string name="myPicks">My Picks</string>
    <string name="game_final">Final</string>
    <string name="pending">Pending</string>
    <string name="win">WIN</string>
    <string name="loss">LOSS</string>
    <string name="currentBalance">Current Balance</string>
    <string name="notAllFieldsAreFull">Please fill in all fields to continue</string>
    <string name="versus">VS</string>
    <string name="swap">Swap Favorite</string>


</resources>
